# ros-motion-control-mirroring

./: README.md  script_FK  script_IK  script_camera
help/: help  help_proxy.txt
help/graphs/: angles.npy  angles_robot.npy  ee.npy  ee_publisher_3D.py  ee_robot.npy  read.py
help/openpose/: CMakeLists.txt  CMakeLists2.7.txt  test.py
help/openpose/results/: image2_keypoints.json
help/realsense/: record
help/ros/: rosman_basics.txt  rosman_links.txt  rosman_moveit.txt  rosman_notions.txt  rosman_python3.txt  rosman_python_examples.txt  rosman_ur.txt
jogarm/: jog_node.launch  jog_settings_fk.yaml  jog_settings_ik.yaml
realsense/: ReadMe.txt  record.cpp
robotiq/: CMakeLists.txt  package.xml
robotiq/src/: gripper_ur_control.cpp  sample_node.cpp
ur/: MoveGroupPythonInterface.py  utils.py
ur/forward kinematics/: angle_publisher.py  mirroring_jogarm_joints.py
ur/inverse kinematics/: ee_publisher_2D.py  ee_publisher_3D.py  mirroring_jogarm_2D.py  mirroring_jogarm_3D.py
